<?xml version="1.0"?>
<package format="2">

  <name>lslidar_n301_decoder</name>
  <version>1.2.0</version>
  <description>
    Point cloud conversions for Leishen N301 LIDARs.
  </description>
  <maintainer email="shaohuashu@lslidar.com">Nick Shu</maintainer>
  <author>Nick Shu</author>
  <license>GNC General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>

  <depend>lslidar_n301_msgs</depend>

</package>
